# rust-budget

./: .gitignore  Cargo.toml  README.md
scenarios/examples/: default.yaml
src/: api.rs  database.rs  lib.rs  main.rs
src/schemas/: .account.json  .payment.json
src/sim/: cash.rs  excel.rs  mod.rs  portfolio.rs
tests/: simulation.rs
