[package]
name = "budget"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = {version = "0.4.31", features = ["serde"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_yaml = "0.9.27"
serde_json = "1.0.108"
thousands = "0.2.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
schemars = { version = "0.8.16", features = [ "chrono" ] }
rand = "0.8.5"
xlsxwriter = "0.6.0"
memoize = "0.4.2"
rayon = "1.8.0"
polars = { version = "0.36.2", features = ["lazy"] }
rand_distr = { version = "0.4.3", features = ["serde"] }

[lib]
name = "budget"
path = "src/lib.rs"
